--- a/login.css
+++ b/login.css
@@ -27,7 +27,10 @@ body {
   margin-top: -50px;
   margin-top: 35px;
 }
-
+.form-button {
+  margin-top: 50px;
+  text-align: left;
+}
 .form-group input {
   height: 42px;
   font-size: 18px;
@@ -49,4 +52,14 @@ body {
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
   content: "\f023";
+}
+button {
+  width: 30%;
+  margin: 5px 0 25;
+}
+.help i {
+  font-size: 20px;
+}
+.forgot i {
+  font-size: 20px;
 }
