--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  scroll-behavior: smooth;
 }
 
 ul,
@@ -319,7 +320,7 @@ a {
   position: relative;
   overflow: hidden;
   margin-top: 10px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 
 .slides {
@@ -418,8 +419,11 @@ a {
 .news-container {
   width: 90%;
   display: table;
-  margin-top: 40px;
   margin-bottom: 30px;
+}
+
+.news-container h1 {
+  text-align: center;
 }
 
 .news-container h4 {
@@ -466,6 +470,7 @@ a {
   -webkit-box-shadow: 0.8px 0.8px 2px 1px rgba(0, 0, 0, 0.34);
   -moz-box-shadow: 0.8px 0.8px 2px 1px rgba(0, 0, 0, 0.34);
   box-shadow: 0.8px 0.8px 2px 1px rgba(0, 0, 0, 0.34);
+  cursor: pointer;
 }
 
 .news-text a:hover {
@@ -544,18 +549,20 @@ a {
 }
 
 .callout-btn1 {
-  background-color: white;
+  background-color: #fff;
   color: #111;
   font-size: 22px;
+  font-weight: 700;
   padding: 15px;
   border-radius: 4px;
   margin: 12px;
 }
 
 .callout-btn2 {
-  background-color: blue;
-  color: white;
+  background-color: #104fa7;
+  color: #fff;
   font-size: 22px;
+  font-weight: 700;
   padding: 15px;
   border-radius: 4px;
   margin: 12px;
@@ -563,79 +570,67 @@ a {
 
 /********** Footer **********/
 .footer {
-  margin-top: 80px;
-  padding-top: 20px;
-  background-color: #ddd;
+  background-color: #eee;
+  text-align: center;
+  position: relative;
+}
+
+.footer-col {
+  padding: 0 20px;
+}
+
+.footer-col a:not(.fab) {
+  text-decoration: underline;
+  color: blue;
+  cursor: pointer;
+}
+
+.footer-col a:not(.fab):hover {
+  color: #337;
+}
+
+.footer-col h1 {
   text-align: center;
 }
 
-.footer h2 {
-  text-align: center;
+.footer-col p {
+  color: #333;
 }
 
-.footer-logo-col {
-  padding-top: 20px;
-  padding-left: 20px;
-}
-
-.footer-logo {
-  height: 180px;
-}
-
-.footer-map-col {
-  padding-top: 20px;
-  padding-left: 20px;
-}
-
-.footer-map {
-  display: block;
-  height: 150px;
-  border: grey solid 1px;
-  border-radius: 4px;
-  margin: auto;
-}
-
-.footer-contact-col {
-  padding-top: 20px;
-  padding-left: 20px;
-}
-
-.footer-social-col {
-  padding-top: 20px;
-  padding-left: 20px;
-}
-
-.footer .fab {
+.footer-col .fab {
   margin: 4px;
   font-size: 27px;
 }
 
-.footer-copyright-col {
-  position: relative;
-  padding-left: 20px;
-}
-
 .footer-copyright-col p {
   color: #888;
+  text-align: start;
 }
 
 #goback-btn {
   display: block;
   position: absolute;
-  bottom: 5px;
-  right: 10px;
+  bottom: 15px;
+  right: 15px;
   z-index: 99;
   height: 45px;
   width: 45px;
   border: none;
   outline: none;
-  background-color: blue;
-  color: white;
+  background-color: #104fa7;
+  color: #fff;
   cursor: pointer;
   border-radius: 10px;
   font-size: 18px;
 }
 
 #goback-btn:hover {
-  background-color: #555;
+  background-color: #00f;
+}
+
+@media screen and (max-width: 750px) {
+  .footer-col {
+    width: 90%;
+    margin: auto;
+  }
 }
