--- a/css/el_club.css
+++ b/css/el_club.css
@@ -1,1 +1,33 @@
+.page-principal {
+  margin: 0px;
+  padding: 40px 0 0;
+}
 
+.col-club {
+  position: relative;
+  min-height: 1px;
+  padding-left: 130px;
+}
+#links {
+  color: #0d52a1;
+}
+
+img.align-right {
+  margin-left: 30px;
+  float: right;
+}
+.aling-right {
+  margin: 0.5em 0 0.5em;
+}
+img {
+  border: 0;
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+.container-club img {
+  width: 300px;
+  float: right;
+  margin-left: 20px;
+  margin-bottom: 200px;
+}
