--- a/css/contacto.css
+++ b/css/contacto.css
@@ -1,1 +1,77 @@
+.content-container {
+  width: 75%;
+  margin: auto;
+  margin-bottom: 20px;
+  overflow: hidden;
+}
 
+.content-container a {
+  text-decoration: underline;
+  color: #00f;
+  cursor: pointer;
+}
+
+.content-container p {
+  line-height: 25px;
+}
+
+.content-container .iframe-wrapper {
+  border: #bbb solid 1px;
+  border-radius: 10px;
+}
+
+.content-container iframe {
+  border-radius: 10px;
+}
+
+.content-container a:hover {
+  color: #337;
+}
+
+.content-container img {
+  width: 100%;
+  border: #bbb solid 1px;
+  border-radius: 3px;
+}
+
+.form-container label {
+  font-size: 20px;
+}
+
+.form-container input[type="text"],
+.form-container input[type="email"],
+.form-container textarea {
+  width: 100%;
+  height: 45px;
+  padding: 12px 10px;
+  font-size: 18px;
+  margin-top: 3px;
+  margin-bottom: 12px;
+  border: #aaa solid 1px;
+  border-radius: 5px;
+}
+
+.form-container input:focus,
+.form-container textarea:focus {
+  border: lightblue solid 3px;
+}
+
+.form-container textarea {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  height: 150px;
+  resize: none;
+}
+
+.form-container input[type="submit"] {
+  margin-top: 10px;
+  float: right;
+  font-size: 20px;
+  color: #fff;
+  background-color: #104fa7;
+  padding: 8px 20px;
+  border-radius: 6px;
+  -webkit-box-shadow: 0.8px 0.8px 2px 1px rgba(0, 0, 0, 0.34);
+  -moz-box-shadow: 0.8px 0.8px 2px 1px rgba(0, 0, 0, 0.34);
+  box-shadow: 0.8px 0.8px 2px 1px rgba(0, 0, 0, 0.34);
+  cursor: pointer;
+}
