--- a/css/contacto.css
+++ b/css/contacto.css
@@ -28,12 +28,6 @@
   color: #337;
 }
 
-.content-container img {
-  width: 100%;
-  border: #bbb solid 1px;
-  border-radius: 3px;
-}
-
 .form-container label {
   font-size: 20px;
 }
@@ -49,6 +43,7 @@
   margin-bottom: 12px;
   border: #aaa solid 1px;
   border-radius: 5px;
+  outline: none;
 }
 
 .form-container input:focus,
@@ -74,4 +69,5 @@
   -moz-box-shadow: 0.8px 0.8px 2px 1px rgba(0, 0, 0, 0.34);
   box-shadow: 0.8px 0.8px 2px 1px rgba(0, 0, 0, 0.34);
   cursor: pointer;
+  outline: none;
 }
