--- a/css/normativa.css
+++ b/css/normativa.css
@@ -1,1 +1,41 @@
+.content-container {
+  width: 80%;
+  margin: auto;
+}
 
+.normative {
+  margin-bottom: 80px;
+}
+
+.normative-content {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 30px;
+}
+
+.normative-image {
+  width: 100%;
+  margin-right: 20px;
+}
+
+.normative-image img {
+  width: 100%;
+  border-radius: 8px;
+  min-width: 200px;
+  max-width: 300px;
+}
+
+.normative-text {
+  width: auto;
+}
+
+@media screen and (max-width: 720px) {
+  .normative-content {
+    display: block;
+  }
+
+  .normative-text h3 {
+    margin-top: 10px;
+    margin-bottom: -10px;
+  }
+}
