--- a/css/cuerpo_tecnico.css
+++ b/css/cuerpo_tecnico.css
@@ -9,40 +9,83 @@
   color: #333;
 }
 
-.content-container img {
-  height: 350px;
-  float: right;
-  border-radius: 10px;
-  margin-left: 30px;
-  margin-top: 30px;
+.image-container h3 {
+  margin-top: 10px;
 }
 
+.image-container {
+  width: 25%;
+  margin: 12%;
+  margin-top: 0px;
+  display: inline-block;
+  vertical-align: top;
+  margin-bottom: 30px;
+  position: relative;
+}
+
+.image-container img {
+  width: 100%;
+  border-radius: 10px;
+}
 .sections-container {
   display: flex;
   justify-content: space-between;
   width: 70%;
   margin: 30px auto;
 }
-.content-container h3 {
-  margin-top: 4px;
-}
-.image-container {
-  width: 25%;
-}
-
-.image-container img {
+.sections-container div {
+  max-height: 400px;
+  max-width: 100%;
   width: 100%;
-  border-radius: 8px;
+  text-align: center;
+}
+.sections-container img {
+  max-height: 250px;
+  width: auto;
+  max-width: 90%;
+  border-radius: 5px;
+  display: block;
+  margin: auto;
 }
 
 @media screen and (max-width: 700px) {
   .content-container {
     display: block;
   }
+  @media screen and (max-width: 1210px) {
+    .image-container img {
+      float: initial;
+      margin: auto;
+      display: block;
+      height: auto;
+      width: 100%;
+    }
+  }
+  @media screen and (min-width: 320px) and (max-width: 480px) {
+    .image-container img {
+      display: inline-block;
+      width: 300px;
+    }
+    .image-container p {
+      display: block;
+    }
+  }
 
-  .image-container {
-    width: 400px;
-    margin: auto;
-    margin-bottom: 40px;
+  @media (min-width: 768px) {
+    .image-container {
+      width: 90%;
+    }
+  }
+  @media screen and (max-width: 800px) {
+    .sections-container {
+      display: initial;
+      width: 90%;
+    }
+
+    .image-container {
+      width: 400px;
+      margin: auto;
+      margin-bottom: 40px;
+    }
   }
 }
