--- a/css/matriculacion.css
+++ b/css/matriculacion.css
@@ -1,29 +1,40 @@
+.main {
+  background-color: #e8e0ee;
+  padding: 20px 0;
+}
+
 .content-container {
-  width: 75%;
+  width: 760px;
   margin: auto;
   margin-bottom: 20px;
   overflow: hidden;
+  background-color: #fff;
+  padding: 10px 50px;
+  border-radius: 10px;
+  border: #bbb solid 1px;
 }
 
-.form-container label {
+.form-field {
+  margin: 20px 0;
+}
+
+.field-title {
   font-size: 20px;
+  margin: 0;
+  display: inline-block;
+  padding-bottom: 5px;
 }
 
 .form-container input[type="text"],
 .form-container input[type="date"] {
-  width: 50%;
+  width: 100%;
   height: 45px;
   padding: 12px 10px;
   font-size: 18px;
-  margin-top: 3px;
-  margin-bottom: 12px;
+  /* margin: 3px auto 12px; */
   border: #aaa solid 1px;
   border-radius: 5px;
   outline: none;
-}
-
-.form-container input[type="radio"] {
-  margin-bottom: 5px;
 }
 
 .form-container input[type="date"] {
@@ -43,8 +54,8 @@
 }
 
 .form-container input[type="submit"] {
-  margin-top: 10px;
   float: right;
+  margin-bottom: 15px;
   font-size: 20px;
   color: #fff;
   background-color: #104fa7;
@@ -55,4 +66,20 @@
   box-shadow: 0.8px 0.8px 2px 1px rgba(0, 0, 0, 0.34);
   cursor: pointer;
   outline: none;
+}
+
+.form-container input[type="submit"]:hover {
+  background-color: #0080ff;
+}
+
+@media screen and (max-width: 800px) {
+  .content-container {
+    width: 95%;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .content-container {
+    padding: 10px 25px;
+  }
 }
