--- a/css/matriculacion.css
+++ b/css/matriculacion.css
@@ -31,7 +31,6 @@
   height: 45px;
   padding: 12px 10px;
   font-size: 18px;
-  /* margin: 3px auto 12px; */
   border: #aaa solid 1px;
   border-radius: 5px;
   outline: none;
@@ -42,15 +41,8 @@
   min-width: 200px;
 }
 
-.form-container input:focus,
-.form-container textarea:focus {
+.form-container input:focus {
   border: lightblue solid 3px;
-}
-
-.form-container textarea {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  height: 150px;
-  resize: none;
 }
 
 .form-container input[type="submit"] {
