--- a/css/normativa.css
+++ b/css/normativa.css
@@ -9,16 +9,14 @@
 
 .normative-content {
   display: flex;
-  justify-content: space-between;
   margin-top: 30px;
 }
 
-.normative-image {
-  width: 100%;
-  margin-right: 20px;
+.normative-img {
+  margin-right: 60px;
 }
 
-.normative-image img {
+.normative-img img {
   width: 100%;
   border-radius: 8px;
   min-width: 200px;
