--- a/css/registrar_entrenador.css
+++ b/css/registrar_entrenador.css
@@ -27,7 +27,7 @@
 
 .form-container input[type="text"],
 .form-container input[type="date"],
-textarea {
+.form-container input[type="email"] {
   width: 100%;
   height: 45px;
   padding: 12px 10px;
@@ -35,20 +35,6 @@ textarea {
   border: #aaa solid 1px;
   border-radius: 5px;
   outline: none;
-}
-
-textarea {
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 16px;
-  resize: vertical;
-  margin-bottom: 20px;
-}
-#news-description {
-  height: 90px;
-}
-
-#news-body {
-  height: 350px;
 }
 
 .form-container input[type="date"] {
