--- a/css/administrador.css
+++ b/css/administrador.css
@@ -3,7 +3,8 @@ body {
 }
 
 .administrator-header {
-  margin: 10px 0;
+  padding: 10px 0;
+  background-color: #fff;
 }
 
 .administrator-header img {
