--- a/css/modificar_imagenes.css
+++ b/css/modificar_imagenes.css
@@ -11,6 +11,7 @@
   height: 350px;
   width: 30%;
   margin: 20px 0;
+  position: relative;
 }
 
 @media screen and (max-width: 1200px) {
@@ -23,4 +24,18 @@
   .img-container {
     width: 90%;
   }
+}
+
+.img-container .bin-img {
+  position: absolute;
+  height: 40px;
+  top: 5px;
+  right: 5px;
+  cursor: pointer;
+  z-index: 100;
+  border: transparent solid 3px;
+}
+
+.img-container .bin-img:hover {
+  border: #f00 solid 3px;
 }
