--- a/css/matriculacion.css
+++ b/css/matriculacion.css
@@ -14,6 +14,16 @@
   border: #bbb solid 1px;
 }
 
+.hidden {
+  display: none;
+}
+
+.required {
+  color: #e32;
+  content: ' *';
+  display:inline;
+}
+
 .form-field {
   margin: 20px 0;
 }
