--- a/css/matriculacion.css
+++ b/css/matriculacion.css
@@ -20,8 +20,8 @@
 
 .required {
   color: #e32;
-  content: ' *';
-  display:inline;
+  content: " *";
+  display: inline;
 }
 
 .form-field {
@@ -72,6 +72,22 @@
 
 .form-container input[type="submit"]:hover {
   background-color: #0080ff;
+}
+
+#tlf-prefijo {
+  position: relative;
+  display: block;
+  box-sizing: border-box;
+}
+
+#tlf-prefijo::after {
+  content: "+34";
+  position: absolute;
+  top: 10.5px;
+  left: 12px;
+  font-size: 18px;
+  display: block;
+  font-weight: 700;
 }
 
 @media screen and (max-width: 800px) {
