--- a/css/registrar_usuarios.css
+++ b/css/registrar_usuarios.css
@@ -10,6 +10,56 @@
   background-color: #e7e7e7;
 }
 
+.form-field {
+  margin: 20px 0;
+}
+
+.field-title {
+  font-size: 20px;
+  margin: 0;
+  display: inline-block;
+  padding-bottom: 5px;
+}
+
+.form-container input[type="text"],
+.form-container input[type="date"] {
+  width: 100%;
+  height: 45px;
+  padding: 12px 10px;
+  font-size: 18px;
+  border: #aaa solid 1px;
+  border-radius: 5px;
+  outline: none;
+}
+
+.form-container input[type="date"] {
+  width: 20%;
+  min-width: 200px;
+}
+
+.form-container input:focus {
+  border: lightblue solid 3px;
+}
+
+.form-container input[type="submit"] {
+  float: right;
+  margin-bottom: 15px;
+  font-size: 20px;
+  color: #fff;
+  background-color: #104fa7;
+  padding: 8px 20px;
+  border-radius: 6px;
+  -webkit-box-shadow: 0.8px 0.8px 2px 1px rgba(0, 0, 0, 0.34);
+  -moz-box-shadow: 0.8px 0.8px 2px 1px rgba(0, 0, 0, 0.34);
+  box-shadow: 0.8px 0.8px 2px 1px rgba(0, 0, 0, 0.34);
+  cursor: pointer;
+  outline: none;
+}
+
+.form-container input[type="submit"]:hover {
+  background-color: #0080ff;
+}
+
 #tlf-prefijo {
   position: relative;
   display: block;
