--- a/css/entrenador_datos.css
+++ b/css/entrenador_datos.css
@@ -14,6 +14,22 @@
   border: #bbb solid 1px;
 }
 
+#tlf-prefijo {
+  position: relative;
+  display: block;
+  box-sizing: border-box;
+}
+
+#tlf-prefijo::after {
+  content: "+34";
+  position: absolute;
+  top: 10.5px;
+  left: 12px;
+  font-size: 18px;
+  display: block;
+  font-weight: 700;
+}
+
 .form-field {
   margin: 20px 0;
 }
