--- a/css/administrar_usuarios.css
+++ b/css/administrar_usuarios.css
@@ -10,7 +10,19 @@
 .hidden {
   display: none;
 }
-
+.trainer-container .edit-img {
+  position: absolute;
+  height: 40px;
+  top: 8px;
+  right: -50px;
+  cursor: pointer;
+}
+.menu-section .logout-img {
+  margin-top: 30px;
+  padding-left: 80px;
+  height: 40px;
+  cursor: pointer;
+}
 .trainer-container,
 .gymnast-container {
   position: relative;
