--- a/css/palmares.css
+++ b/css/palmares.css
@@ -12,6 +12,7 @@
 .trophy {
   display: table-cell;
   width: 50%;
+  vertical-align: middle;
 }
 
 .trophy-img {
@@ -21,26 +22,26 @@
 }
 
 .trophy-img img {
-  width: 320px;
+  width: 360px;
   border-radius: 10px;
 }
 
 .trophy-text {
-  width: 320px;
+  width: 360px;
   margin: auto;
 }
 
-@media screen and (max-width: 990px) {
+@media screen and (max-width: 1100px) {
   .trophy-img img {
-    width: 250px;
+    width: 300px;
   }
 
   .trophy-text {
-    width: 250px;
+    width: 300px;
   }
 }
 
-@media screen and (max-width: 675px) {
+@media screen and (max-width: 900px) {
   .palmares-content {
     width: 80%;
     margin: 30px auto;
