--- a/css/escuela.css
+++ b/css/escuela.css
@@ -8,14 +8,19 @@
   color: #333;
 }
 
+.image-container img {
+  vertical-align: middle;
+}
 .content-container img {
-  float: center;
+  float: right;
   border-radius: 10px;
   display: block;
-  margin: auto;
-  margin-top: 50px;
-  margin-bottom: 50px;
-  width: 70%;
+  margin-left: 30px;
+  height: auto;
+  margin-bottom: 10px;
+  max-width: 100%;
+  width: 500px;
+  height: 300px;
 }
 
 .sections-container {
@@ -49,7 +54,7 @@ hr {
   .content-container img {
     float: initial;
     margin: auto;
-    display: block;
+    margin-bottom: 10px;
     height: auto;
     width: 100%;
   }
@@ -57,17 +62,19 @@ hr {
 
 @media screen and (max-width: 800px) {
   .sections-container {
-    display: initial;
     width: 90%;
+    margin-bottom: 10px;
   }
 
   .sections-container div {
     max-height: 400px;
     max-width: 100%;
+    margin-bottom: 10px;
     width: 100%;
   }
 
   .sections-container h2 {
     margin: 5px auto 20px;
+    margin-bottom: 10px;
   }
 }
