--- a/css/actividades.css
+++ b/css/actividades.css
@@ -41,7 +41,7 @@
   }
 }
 
-@media screen and (min-width: 300px) and (max-width: 350px) and (max-width: 480px) {
+/* @media screen and (min-width: 300px) and (max-width: 350px) and (max-width: 480px) {
   .image-container img {
     display: inline-block;
     width: 300px;
@@ -56,3 +56,4 @@
     width: 90%;
   }
 }
+ */
